@@ -69,6 +69,11 @@
 	PR tree-optimization/43567
 	* gcc.dg/graphite/pr43567.c: New.
 
+2011-01-18  Sebastian Pop  <sebastian.pop@amd.com>
+
+	PR tree-optimization/43567
+	* gcc.dg/graphite/pr43567.c: New.
+
 2011-01-17  Sebastian Pop  <sebastian.pop@amd.com>
 
 	* Makefile.in (LAMBDA_H): Removed.
